--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: setup artifact
         run: |
           mkdir bin
-          copy /B hello.exe bin/
+          copy hello.exe bin/
       - name: upload artifact
         uses: actions/upload-artifact@v2
         with:
